--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   },
   "homepage": "https://github.com/usk83/materialize-webpack#readme",
   "devDependencies": {
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
   },
   "dependencies": {
