--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
+    "material-design-icons": "^3.0.1",
     "materialize-css": "^0.98.2"
   }
 }
